tests/baselines/reference/genericConstraintDeclaration.errors.txt
genericConstraintDeclaration.ts(2,43): error TS2322: Type 'null' is not assignable to type 'List<T>'.


==== genericConstraintDeclaration.ts (1 errors) ====
    class List<T extends {}>{
        static empty<T extends {}>(): List<T>{return null;}
                                              ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'List<T>'.
    }
    
    
    
    
    